src/test/compile-fail/static-assert.rs
#[static_assert]
static A: bool = false; //~ ERROR static assertion failed

fn main() {
}
